Wed Jul 19 22:44:16 UTC 2006  Ciju John  <johnc@ociweb.com>

        * orbsvcs/tests/Event/Mcast/RTEC_MCast_Federated/SimpleAddressServer.h:

          Add version macros.

Wed Jul 19 22:28:50 UTC 2006  Ciju John  <johnc@ociweb.com>

        * orbsvcs/orbsvcs/Event/ECG_Mcast_EH.cpp:

          The open() initializes the underlying socket that is later
          enabled to be non-blocking. Without open() the enable call will
          fail as it should. This fixes the scoreboard failure introduced
          in:

          Mon Jul 17 14:26:08 UTC 2006  Ciju John  <john_c@ociweb.com>

Wed Jul 19 19:20:28 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be_include/be_global.h:
        * docs/compiler.html:
        * docs/releasenotes/index.html:

          - Added IDL compiler command line option -oS, which sets an
            output directory for all skeleton (*S*) files, similar to what
            the -oA option does for *A.* files. Overrides the -o option
            value, if any. Also updated IDL compiler and related docs.
            This feature will make it easier to automate the generation
            from IDL files for services like the Interface Repository,
            where the stub and skeleton files go to different directories.
            This fix closes [BUGID:2603].

          - Changed all occurrences of 'base_name_only' parameters from
          int to bool.

Wed Jul 19 17:49:47 UTC 2006  Nanbor Wang  <nanbor (a) txcorp (d) com>

        * orbsvcs/examples/FaultTolerance/RolyPoly/client.cpp: Enhanced
          the client to use more than 2 replicas.  The limitation of using
          2 replicas was causing the client to exit when one of the server
          crashes.  This is due to the way ACE_TMCase handling a single
          server as a fault.  But allowing more than 2 replicas, the 2
          remaining servers can continue to work and thus demonstrate how
          FT work.
